--- a/learn-fullstack-development-main/02. HTML and CSS Fundamentals/02. Intro to CSS/18. Fix the input field/styles.css
+++ b/learn-fullstack-development-main/02. HTML and CSS Fundamentals/02. Intro to CSS/18. Fix the input field/styles.css
@@ -18,6 +18,12 @@
     width: 400px;
     margin-left: auto;
     margin-right: auto;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 30px;
+    padding-right: 30px;
+    border: 1px solid #cfd9de;
+    border-radius: 24px;
     /*
     Challenge: 
     Design the search field according to the spec
