--- a/learn-fullstack-development-main/02. HTML and CSS Fundamentals/02. Intro to CSS/10. CSS classes/styles.css
+++ b/learn-fullstack-development-main/02. HTML and CSS Fundamentals/02. Intro to CSS/10. CSS classes/styles.css
@@ -4,12 +4,12 @@
 
 /* Challenge - part 2: 
 Replace the element selectors with class selectors */
-img {
+.spaced1 {
     display: block;
     width: 300px;
 }
 
-input {
+.spaced2 input {
     display: block;
     width: 400px;
 }
