--- a/learn-fullstack-development-main/02. HTML and CSS Fundamentals/02. Intro to CSS/15. Padding/styles.css
+++ b/learn-fullstack-development-main/02. HTML and CSS Fundamentals/02. Intro to CSS/15. Padding/styles.css
@@ -5,6 +5,9 @@
     margin-top: 50px;
     margin-left: auto;
     margin-right: auto;
+
+    padding-top: 200px;
+    padding-right: 200px;
     
     /*
     Challenge:
