--- a/learn-fullstack-development-main/02. HTML and CSS Fundamentals/02. Intro to CSS/17. Aside challenge- style Twitter button/styles.css
+++ b/learn-fullstack-development-main/02. HTML and CSS Fundamentals/02. Intro to CSS/17. Aside challenge- style Twitter button/styles.css
@@ -8,3 +8,15 @@ border color: #cfd9de
 text color: #0f1419
 Remember the font-weight!
 */
+button {
+    border: 1px solid #cfd9de;
+    border-radius : 9999px;
+    background-color: white;
+    color: #0f1419;
+    font-weight: 600;
+    padding-top : 5px;
+    padding-bottom: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
+
+}
