--- a/learn-fullstack-development-main/02. HTML and CSS Fundamentals/02. Intro to CSS/23. Centering both buttons with flexbox/styles.css
+++ b/learn-fullstack-development-main/02. HTML and CSS Fundamentals/02. Intro to CSS/23. Centering both buttons with flexbox/styles.css
@@ -30,6 +30,12 @@ Give the div a "btn-wrapper" class.
     border-radius: 24px;
 }
 
+
+btn-wrapper {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+}
 .btn {
     margin-top: 30px;
     background: #dfe1e5;
