completed the bussiness Card

--- a/learn-fullstack-development-main/02. HTML and CSS Fundamentals/03. Build a Business Card/06. Add a border and padding/styles.css
+++ b/learn-fullstack-development-main/02. HTML and CSS Fundamentals/03. Build a Business Card/06. Add a border and padding/styles.css
@@ -12,4 +12,7 @@ Challenge:
 2. Select the card class and give it a dotted blue border
 3. Add 20 pixels of padding on all sides of the card
 */
-
+.card {
+    border: 2px dotted blue;
+    padding : 20px
+}
