--- a/learn-fullstack-development-main/02. HTML and CSS Fundamentals/03. Build a Business Card/05. Make image smaller/styles.css
+++ b/learn-fullstack-development-main/02. HTML and CSS Fundamentals/03. Build a Business Card/05. Make image smaller/styles.css
@@ -8,3 +8,7 @@ Challenge:
 Set the width of the image to 150px.
 PS: Use a class to select the img element.
 */
+
+.image-container img {
+    width: 150px;
+}
