--- a/learn-fullstack-development-main/02. HTML and CSS Fundamentals/03. Build a Business Card/16. Margin_padding shorthand/Exercise 1/styles.css
+++ b/learn-fullstack-development-main/02. HTML and CSS Fundamentals/03. Build a Business Card/16. Margin_padding shorthand/Exercise 1/styles.css
@@ -8,8 +8,5 @@
     Challenge:
     Translate this into using the margin shorthand. 
     */
-    margin-top: 40px;
-    margin-right: 0;
-    margin-bottom: 0;
-    margin-left: 100px;
+    margin : 40px 100px 0 100px;
 }
